<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>sensor_confidence</name>
  <version>0.1.0</version>

  <description>
    Multimodal sensor health estimation and confidence fusion for robotic manipulation.
  </description>

  <maintainer email="raicheg@uci.edu">raich</maintainer>

  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS -->
  <depend>rclpy</depend>

  <!-- Messages -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Python packages -->
  <exec_depend>cv_bridge</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>